--- a/backend/docs/login/login.yaml
+++ b/backend/docs/login/login.yaml
@@ -4,7 +4,7 @@ info:
   description: API para la autenticación de usuarios y generación de un token JWT.
   version: 1.0.0
 servers:
-  - url: http://localhost:5000
+  - url: https://edvmanager.onrender.com
     description: Servidor local
 paths:
   /login:
