--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node -r newrelic server.js",
+    "dev": "nodemon -r newrelic server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "newrelic": "^12.18.2",
     "pg": "^8.14.1"
   },
   "devDependencies": {
